--- a/images/hub/requirements.txt
+++ b/images/hub/requirements.txt
@@ -4,11 +4,13 @@
 #
 #    Use the "Run workflow" button at https://github.com/jupyterhub/zero-to-jupyterhub-k8s/actions/workflows/watch-dependencies.yaml
 #
-aiohttp==3.9.3
+aiohappyeyeballs==2.3.2
+    # via aiohttp
+aiohttp==3.10.0
     # via kubernetes-asyncio
 aiosignal==1.3.1
     # via aiohttp
-alembic==1.13.1
+alembic==1.13.2
     # via jupyterhub
 async-generator==1.10
     # via jupyterhub
@@ -17,11 +19,11 @@ attrs==23.2.0
     #   aiohttp
     #   jsonschema
     #   referencing
-bcrypt==4.1.2
+bcrypt==4.2.0
     # via
     #   jupyterhub-firstuseauthenticator
     #   jupyterhub-nativeauthenticator
-certifi==2024.2.2
+certifi==2024.7.4
     # via
     #   kubernetes-asyncio
     #   requests
@@ -31,7 +33,7 @@ cffi==1.16.0
     # via cryptography
 charset-normalizer==3.3.2
     # via requests
-cryptography==42.0.5
+cryptography==43.0.0
     # via
     #   pyjwt
     #   pyopenssl
@@ -45,15 +47,15 @@ frozenlist==1.4.1
     #   aiosignal
 greenlet==3.0.3
     # via sqlalchemy
-idna==3.6
+idna==3.7
     # via
     #   requests
     #   yarl
-jinja2==3.1.3
+jinja2==3.1.4
     # via
     #   jupyterhub
     #   jupyterhub-kubespawner
-jsonschema==4.21.1
+jsonschema==4.23.0
     # via
     #   jupyter-telemetry
     #   oauthenticator
@@ -61,7 +63,7 @@ jsonschema-specifications==2023.12.1
     # via jsonschema
 jupyter-telemetry==0.1.0
     # via jupyterhub
-jupyterhub==4.1.5
+jupyterhub==4.1.6
     # via
     #   -r requirements.in
     #   jupyterhub-firstuseauthenticator
@@ -87,11 +89,11 @@ jupyterhub-nativeauthenticator==1.2.0
     # via -r requirements.in
 jupyterhub-tmpauthenticator==1.0.0
     # via -r requirements.in
-kubernetes-asyncio==29.0.0
+kubernetes-asyncio==30.1.1
     # via jupyterhub-kubespawner
 ldap3==2.9.1
     # via jupyterhub-ldapauthenticator
-mako==1.3.2
+mako==1.3.5
     # via alembic
 markupsafe==2.1.5
     # via
@@ -105,7 +107,7 @@ mwoauth==0.4.0
     # via -r requirements.in
 nullauthenticator==1.0.0
     # via -r requirements.in
-oauthenticator==16.3.0
+oauthenticator==16.3.1
     # via -r requirements.in
 oauthlib==3.2.2
     # via
@@ -115,7 +117,7 @@ oauthlib==3.2.2
     #   requests-oauthlib
 onetimepass==1.0.1
     # via jupyterhub-nativeauthenticator
-packaging==24.0
+packaging==24.1
     # via
     #   jupyterhub
     #   jupyterhub-idle-culler
@@ -137,9 +139,9 @@ pyjwt[crypto]==2.8.0
     #   jupyterhub-ltiauthenticator
     #   mwoauth
     #   oauthenticator
-pymysql==1.1.0
+pymysql==1.1.1
     # via -r requirements.in
-pyopenssl==24.1.0
+pyopenssl==24.2.1
     # via certipy
 python-dateutil==2.9.0.post0
     # via
@@ -154,11 +156,11 @@ pyyaml==6.0.1
     # via
     #   jupyterhub-kubespawner
     #   kubernetes-asyncio
-referencing==0.34.0
+referencing==0.35.1
     # via
     #   jsonschema
     #   jsonschema-specifications
-requests==2.31.0
+requests==2.32.3
     # via
     #   jupyterhub
     #   mwoauth
@@ -166,7 +168,7 @@ requests==2.31.0
     #   requests-oauthlib
 requests-oauthlib==2.0.0
     # via mwoauth
-rpds-py==0.18.0
+rpds-py==0.19.1
     # via
     #   jsonschema
     #   referencing
@@ -181,7 +183,7 @@ six==1.16.0
     #   kubernetes-asyncio
     #   onetimepass
     #   python-dateutil
-sqlalchemy==2.0.29
+sqlalchemy==2.0.31
     # via
     #   alembic
     #   jupyterhub
@@ -192,13 +194,13 @@ statsd==4.0.1
     # via -r requirements.in
 text-unidecode==1.3
     # via python-slugify
-tornado==6.4
+tornado==6.4.1
     # via
     #   jupyterhub
     #   jupyterhub-idle-culler
     #   jupyterhub-ldapauthenticator
     #   oauthenticator
-traitlets==5.14.2
+traitlets==5.14.3
     # via
     #   jupyter-telemetry
     #   jupyterhub
@@ -206,17 +208,14 @@ traitlets==5.14.2
     #   jupyterhub-ldapauthenticator
     #   jupyterhub-ltiauthenticator
     #   oauthenticator
-typing-extensions==4.10.0
+typing-extensions==4.12.2
     # via
     #   alembic
     #   sqlalchemy
-urllib3==2.2.1
+urllib3==2.2.2
     # via
     #   jupyterhub-kubespawner
     #   kubernetes-asyncio
     #   requests
 yarl==1.9.4
     # via aiohttp
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
