--- a/jupyterhub/templates/image-puller/serviceaccount.yaml
+++ b/jupyterhub/templates/image-puller/serviceaccount.yaml
@@ -6,13 +6,10 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "jupyterhub.hook-image-awaiter-serviceaccount.fullname" . }}
+  {{- with .Values.hub.serviceAccount.annotations }}
+  annotations:
+    {{- . | toYaml | nindent 4 }}
+  {{- end }}
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
-    hub.jupyter.org/deletable: "true"
-  annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
-    {{- with .Values.prePuller.hook.serviceAccount.annotations }}
-    {{- . | toYaml | nindent 4 }}
-    {{- end }}
 {{- end }}
