--- a/jupyterhub/templates/hub/serviceaccount.yaml
+++ b/jupyterhub/templates/hub/serviceaccount.yaml
@@ -3,10 +3,18 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "jupyterhub.hub-serviceaccount.fullname" . }}
+  labels:
+    {{- include "jupyterhub.labels" . | nindent 4 }}
+    hub.jupyter.org/deletable: "true"
   {{- with .Values.hub.serviceAccount.annotations }}
   annotations:
     {{- . | toYaml | nindent 4 }}
   {{- end }}
-  labels:
-    {{- include "jupyterhub.labels" . | nindent 4 }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+    "helm.sh/hook-weight": "0"
+    {{- with .Values.prePuller.hook.serviceAccount.annotations }}
+    {{- . | toYaml | nindent 2 }}
+    {{- end }}
 {{- end }}
