--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -619,7 +619,7 @@ prePuller:
     resources: {}
     serviceAccount:
       create: true
-      name: prepuller-hook
+      name:
       annotations: {}
   continuous:
     enabled: true
