--- a/jupyterhub/templates/image-puller/serviceaccount.yaml
+++ b/jupyterhub/templates/image-puller/serviceaccount.yaml
@@ -9,7 +9,9 @@ metadata:
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
   annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-30"
     {{- with .Values.prePuller.hook.serviceAccount.annotations }}
-    {{- . | toYaml | nindent 4 }}
+    {{- . | toYaml | nindent 2 }}
     {{- end }}
 {{- end }}
