--- a/jupyterhub/templates/image-puller/serviceaccount.yaml
+++ b/jupyterhub/templates/image-puller/serviceaccount.yaml
@@ -2,6 +2,7 @@
 ServiceAccount for the pre-puller hook's image-awaiter-job
 */}}
 {{- if .Values.prePuller.hook.serviceAccount.create -}}
+{{- if (include "jupyterhub.imagePuller.daemonset.hook.install" .) -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -14,4 +15,5 @@ metadata:
     {{- with .Values.prePuller.hook.serviceAccount.annotations }}
     {{- . | toYaml | nindent 4 }}
     {{- end }}
+{{- end }}
 {{- end }}
