fix: Only create service account in specific scenarios

--- a/jupyterhub/templates/image-puller/serviceaccount.yaml
+++ b/jupyterhub/templates/image-puller/serviceaccount.yaml
@@ -1,8 +1,8 @@
 {{- /*
 ServiceAccount for the pre-puller hook's image-awaiter-job
 */}}
+{{- if or (include "jupyterhub.imagePuller.daemonset.hook.install" .) .Values.prePuller.continuous.enabled -}}
 {{- if .Values.prePuller.hook.serviceAccount.create -}}
-{{- if (include "jupyterhub.imagePuller.daemonset.hook.install" .) -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
