fix: Update docs

--- a/jupyterhub/templates/image-puller/serviceaccount.yaml
+++ b/jupyterhub/templates/image-puller/serviceaccount.yaml
@@ -1,8 +1,7 @@
 {{- /*
-ServiceAccount for the pre-puller hook's image-awaiter-job
+Service Account for the  image puller hooks
 */}}
 {{- if .Values.prePuller.hook.serviceAccount.create -}}
-{{- if or (include "jupyterhub.imagePuller.daemonset.hook.install" .) .Values.prePuller.continuous.enabled -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
