--- a/jupyterhub/templates/image-puller/serviceaccount.yaml
+++ b/jupyterhub/templates/image-puller/serviceaccount.yaml
@@ -1,7 +1,8 @@
 {{- /*
-Service Account for the  image puller hooks
+Service Account for the pre-puller hook
 */}}
 {{- if .Values.prePuller.hook.serviceAccount.create -}}
+{{- if or (include "jupyterhub.imagePuller.daemonset.hook.install" .) .Values.prePuller.continuous.enabled -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
