fix: use extraPaths instead of customPaths to keep coherence with properties naming convention; add URL to the kubernetes doc so user can find examples to build the extraPaths list

--- a/jupyterhub/templates/ingress.yaml
+++ b/jupyterhub/templates/ingress.yaml
@@ -24,7 +24,7 @@ spec:
                 name: {{ include "jupyterhub.proxy-public.fullname" $ }}
                 port:
                   name: http
-          {{- range $path := $.Values.ingress.customPaths }}
+          {{- range $path := $.Values.ingress.extraPaths }}
           - path: {{ $path.path }}
             pathType: {{ $path.pathType }}
             backend:
