--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -695,7 +695,7 @@ ingress:
   pathSuffix:
   pathType: Prefix
   tls: []
-  customPaths: []
+  extraPaths: []
 
 # cull relates to the jupyterhub-idle-culler service, responsible for evicting
 # inactive singleuser pods.
