--- a/jupyterhub/templates/ingress.yaml
+++ b/jupyterhub/templates/ingress.yaml
@@ -24,19 +24,9 @@ spec:
                 name: {{ include "jupyterhub.proxy-public.fullname" $ }}
                 port:
                   name: http
-          {{- range $path := $.Values.ingress.extraPaths }}
-          - path: {{ $path.path }}
-            pathType: {{ $path.pathType }}
-            backend:
-              service:
-                name: {{ $path.backend.service.name }}
-                port:
-                  {{- if $path.backend.service.port.number }}
-                  number: {{ $path.backend.service.port.number }}
-                  {{- else if $path.backend.service.port.name }}
-                  name: {{ $path.backend.service.port.name }}
-                  {{- end }}
-          {{- end }}
+          {{- with $.Values.ingress.extraPaths }}  
+          {{- . | toYaml | nindent 10 }}  
+          {{- end }}  
       {{- if $host }}
       host: {{ $host | quote }}
       {{- end }}
