Add config for k8s Services' ipFamilies and ipFamilyPolicy

--- a/tools/templates/lint-and-validate-values.yaml
+++ b/tools/templates/lint-and-validate-values.yaml
@@ -70,6 +70,9 @@ hub:
       - name: dummy-port-2
         port: 8182
         targetPort: string-named-target-port
+    ipFamilyPolicy: SingleStack
+    ipFamilies:
+      - IPv4
   baseUrl: /
   activeServerLimit: 3
   deploymentStrategy:
@@ -226,6 +229,10 @@ proxy:
     externalIPs:
       - 123.123.123.123
       - 123.123.123.124
+    ipFamilyPolicy: DualStack
+    ipFamilies:
+      - IPv4
+      - IPv6
   chp:
     revisionHistoryLimit: 1
     extraCommandLineFlags:
