--- a/images/hub/requirements.txt
+++ b/images/hub/requirements.txt
@@ -65,7 +65,7 @@ jinja2==3.1.4
     #   jupyterhub-kubespawner
 jsonpointer==3.0.0
     # via jsonschema
-jsonschema[format-nongpl]==4.23.0
+jsonschema==4.23.0
     # via
     #   jupyter-events
     #   oauthenticator
@@ -89,7 +89,7 @@ jupyterhub-hmacauthenticator==1.0
     # via -r requirements.in
 jupyterhub-idle-culler==1.4.0
     # via -r requirements.in
-jupyterhub-kubespawner==6.2.0
+jupyterhub-kubespawner==7.0.0b1
     # via -r requirements.in
 jupyterhub-ldapauthenticator==1.3.2
     # via -r requirements.in
@@ -147,7 +147,7 @@ pydantic==2.9.2
     # via jupyterhub
 pydantic-core==2.23.4
     # via pydantic
-pyjwt[crypto]==2.9.0
+pyjwt==2.9.0
     # via
     #   -r requirements.in
     #   jupyterhub-ltiauthenticator
