--- a/images/hub/requirements.in
+++ b/images/hub/requirements.in
@@ -16,7 +16,7 @@ jupyterhub-ldapauthenticator
 jupyterhub-ltiauthenticator!=1.3.0
 jupyterhub-nativeauthenticator
 jupyterhub-tmpauthenticator
-oauthenticator[mediawiki]
+oauthenticator[googlegroups,mediawiki]
 
 ## Kubernetes spawner
 jupyterhub-kubespawner==7.0.0b1
