fix default pvc mounting with kubespawner 7
- remove unneeded default for pvcNameTemplate
- use new `{pvc_name}` template field to mount the spawner's resolved pvc,
      rather than overriding the claim name, which may not match the created pvc

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -413,8 +413,8 @@ singleuser:
     homeMountPath: /home/jovyan
     dynamic:
       storageClass:
-      pvcNameTemplate: claim-{username}{servername}
-      volumeNameTemplate: volume-{username}{servername}
+      pvcNameTemplate:
+      volumeNameTemplate: volume-{user_server}
       storageAccessModes: [ReadWriteOnce]
       subPath:
   image:
