--- a/images/hub/requirements.txt
+++ b/images/hub/requirements.txt
@@ -6,7 +6,7 @@
 #
 aiohappyeyeballs==2.4.3
     # via aiohttp
-aiohttp==3.10.8
+aiohttp==3.10.10
     # via kubernetes-asyncio
 aiosignal==1.3.1
     # via aiohttp
@@ -35,7 +35,7 @@ certipy==0.2.1
     # via jupyterhub
 cffi==1.17.1
     # via cryptography
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
     # via requests
 cryptography==43.0.1
     # via
@@ -51,9 +51,9 @@ frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
-google-api-core==2.20.0
+google-api-core==2.21.0
     # via google-api-python-client
-google-api-python-client==2.147.0
+google-api-python-client==2.149.0
     # via oauthenticator
 google-auth==2.35.0
     # via
@@ -91,7 +91,7 @@ jsonschema==4.23.0
     # via
     #   jupyter-events
     #   oauthenticator
-jsonschema-specifications==2023.12.1
+jsonschema-specifications==2024.10.1
     # via jsonschema
 jupyter-events==0.10.0
     # via jupyterhub
@@ -110,7 +110,7 @@ jupyterhub-hmacauthenticator==1.0
     # via -r requirements.in
 jupyterhub-idle-culler==1.4.0
     # via -r requirements.in
-jupyterhub-kubespawner==7.0.0b2
+jupyterhub-kubespawner==7.0.0b3
     # via -r requirements.in
 jupyterhub-ldapauthenticator==1.3.2
     # via -r requirements.in
@@ -126,7 +126,7 @@ ldap3==2.9.1
     # via jupyterhub-ldapauthenticator
 mako==1.3.5
     # via alembic
-markupsafe==2.1.5
+markupsafe==3.0.1
     # via
     #   jinja2
     #   mako
@@ -154,6 +154,8 @@ pamela==1.2.0
     # via jupyterhub
 prometheus-client==0.21.0
     # via jupyterhub
+propcache==0.2.0
+    # via yarl
 proto-plus==1.24.0
     # via google-api-core
 protobuf==5.28.2
@@ -267,7 +269,7 @@ traitlets==5.14.3
     #   jupyterhub-ldapauthenticator
     #   jupyterhub-ltiauthenticator
     #   oauthenticator
-types-python-dateutil==2.9.0.20240906
+types-python-dateutil==2.9.0.20241003
     # via arrow
 typing-extensions==4.12.2
     # via
@@ -286,5 +288,5 @@ urllib3==2.2.3
     #   requests
 webcolors==24.8.0
     # via jsonschema
-yarl==1.13.1
+yarl==1.14.0
     # via aiohttp
