--- a/jupyterhub/templates/proxy/deployment.yaml
+++ b/jupyterhub/templates/proxy/deployment.yaml
@@ -100,7 +100,7 @@ spec:
             {{- if .Values.debug.enabled }}
             - --log-level=debug
             {{- end }}
-            {{- if .Values.hub.config.subdomain_host }}
+            {{- if .Values.hub.config.JupyterHub.subdomain_host }}
             - --host-routing
             {{- end }}
             {{- range .Values.proxy.chp.extraCommandLineFlags }}
