--- a/images/hub/requirements.in
+++ b/images/hub/requirements.in
@@ -12,7 +12,7 @@ jupyterhub==5.2.1
 ## Authenticators
 jupyterhub-firstuseauthenticator>=1
 jupyterhub-hmacauthenticator
-jupyterhub-ldapauthenticator==2.0.0.b2
+jupyterhub-ldapauthenticator==2.0.0
 jupyterhub-ltiauthenticator!=1.3.0
 jupyterhub-nativeauthenticator
 jupyterhub-tmpauthenticator
