--- a/images/hub/requirements.in
+++ b/images/hub/requirements.in
@@ -12,14 +12,14 @@ jupyterhub==5.2.1
 ## Authenticators
 jupyterhub-firstuseauthenticator>=1
 jupyterhub-hmacauthenticator
-jupyterhub-ldapauthenticator==2.0.0
+jupyterhub-ldapauthenticator>=2.0.0
 jupyterhub-ltiauthenticator!=1.3.0
 jupyterhub-nativeauthenticator
 jupyterhub-tmpauthenticator
 oauthenticator[googlegroups,mediawiki]
 
 ## Kubernetes spawner
-jupyterhub-kubespawner==7.0.0b3
+jupyterhub-kubespawner>=7.0.0
 
 ## Other optional dependencies for additional features
 pymysql  # mysql
