--- a/images/hub/requirements.txt
+++ b/images/hub/requirements.txt
@@ -81,7 +81,7 @@ jupyter-events==0.10.0
     # via jupyterhub
 jupyterhub==5.2.1
     # via
-    #   -r requirements.in
+    #   -r unfrozen/requirements.txt
     #   jupyterhub-firstuseauthenticator
     #   jupyterhub-kubespawner
     #   jupyterhub-ldapauthenticator
@@ -89,21 +89,21 @@ jupyterhub==5.2.1
     #   jupyterhub-nativeauthenticator
     #   oauthenticator
 jupyterhub-firstuseauthenticator==1.1.0
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 jupyterhub-hmacauthenticator==1.0
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 jupyterhub-idle-culler==1.4.0
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 jupyterhub-kubespawner==7.0.0
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 jupyterhub-ldapauthenticator==2.0.1
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 jupyterhub-ltiauthenticator==1.6.2
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 jupyterhub-nativeauthenticator==1.3.0
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 jupyterhub-tmpauthenticator==1.0.0
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 kubernetes-asyncio==31.1.0
     # via jupyterhub-kubespawner
 ldap3==2.9.1
@@ -121,7 +121,7 @@ multidict==6.1.0
 mwoauth==0.4.0
     # via oauthenticator
 oauthenticator==17.1.0
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 oauthlib==3.2.2
     # via
     #   jupyterhub
@@ -141,7 +141,7 @@ prometheus-client==0.21.0
 propcache==0.2.0
     # via yarl
 psycopg2==2.9.10
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 pyasn1==0.6.1
     # via
     #   ldap3
@@ -152,7 +152,7 @@ pyasn1-modules==0.4.1
 pycparser==2.22
     # via cffi
 pycurl==7.45.3
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 pydantic==2.9.2
     # via jupyterhub
 pydantic-core==2.23.4
@@ -163,7 +163,7 @@ pyjwt==2.9.0
     #   mwoauth
     #   oauthenticator
 pymysql==1.1.1
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 python-dateutil==2.9.0.post0
     # via
     #   arrow
@@ -224,9 +224,9 @@ sqlalchemy==2.0.36
     #   jupyterhub
     #   sqlalchemy-cockroachdb
 sqlalchemy-cockroachdb==2.0.2
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 statsd==4.0.1
-    # via -r requirements.in
+    # via -r unfrozen/requirements.txt
 text-unidecode==1.3
     # via python-slugify
 tornado==6.4.1
