--- a/images/hub/unfrozen/requirements.txt
+++ b/images/hub/unfrozen/requirements.txt
@@ -26,8 +26,8 @@ oauthenticator[googlegroups,mediawiki]==17.*
 jupyterhub-idle-culler==1.*
 
 # Other optional dependencies for additional features
-pymysql==1.*  # mysql
-psycopg2==2.*  # postgres
-pycurl==7.*  # internal http requests handle more load with pycurl
-sqlalchemy-cockroachdb==2.* # cocroachdb
-statsd==4.*  # statsd metrics collection (TODO: remove soon, since folks use prometheus)
+pymysql  # mysql
+psycopg2  # postgres
+pycurl  # internal http requests handle more load with pycurl
+sqlalchemy-cockroachdb # cocroachdb
+statsd  # statsd metrics collection (TODO: remove soon, since folks use prometheus)
