--- a/tbump.toml
+++ b/tbump.toml
@@ -5,7 +5,7 @@
 # Config reference: https://github.com/your-tools/tbump#readme
 #
 [version]
-current = "4.0.0-beta.4"
+current = "4.0.0"
 
 # match our prerelease prefixes
 # -alpha.1
