--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -600,6 +600,7 @@ scheduling:
       seccompProfile:
         type: "RuntimeDefault"
     resources: {}
+    extraPodSpec: {}
   corePods:
     tolerations:
       - key: hub.jupyter.org/dedicated
