--- a/jupyterhub/templates/scheduling/user-placeholder/statefulset.yaml
+++ b/jupyterhub/templates/scheduling/user-placeholder/statefulset.yaml
@@ -32,7 +32,7 @@ spec:
       {{- end }}
       labels:
         {{- /* Changes here will cause the Deployment to restart the pods. */}}
-        {{- include "jupyterhub.labels" . | nindent 8 }}
+        {{- include "jupyterhub.matchLabelsLegacyAndModern" . | nindent 8 }}
         {{- with .Values.scheduling.userPlaceholder.labels }}
         {{- . | toYaml | nindent 8 }}
         {{- end }}
