feat: add externalIPs to proxy configuration

--- a/jupyterhub/templates/proxy/service.yaml
+++ b/jupyterhub/templates/proxy/service.yaml
@@ -81,3 +81,8 @@ spec:
     {{- . | toYaml | nindent 4 }}
   {{- end }}
   {{- end }}
+  {{- with .Values.proxy.service.externalIPs }}
+  externalIPs: {{- range . }}
+    - {{ . }}
+    {{- end }}
+  {{- end }}
