--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -196,6 +196,7 @@ proxy:
       https:
     disableHttpPort: false
     extraPorts: []
+    externalIPs: []
     loadBalancerIP:
     loadBalancerSourceRanges: []
   # chp relates to the proxy pod, which is responsible for routing traffic based
