Move gateway check into separate test to avoid conflicts with autohttps

--- a/.github/workflows/test-chart.yaml
+++ b/.github/workflows/test-chart.yaml
@@ -132,17 +132,13 @@ jobs:
             test: install
             # Also test arm64
             os: ubuntu-24.04-arm
-          - k3s-channel: stable # also test hub-slim, prePuller.hook, gateway
+          - k3s-channel: stable # also test hub-slim, and prePuller.hook
             test: install
             local-chart-extra-args: >-
               --set hub.image.name=quay.io/jupyterhub/k8s-hub-slim
               --set prePuller.hook.enabled=true
               --set prePuller.hook.pullOnlyOnChanges=true
-              --set httpRoute.enabled=true
-              --set httpRoute.gateway.name=traefik-gateway
-              --set httpRoute.gateway.namespace=kube-system
             os: ubuntu-24.04
-            ingress-type: gateway
           - k3s-channel: v1.31 # also test hub.existingSecret and subdomain_host
             test: install
             local-chart-extra-args: >-
@@ -232,15 +228,6 @@ jobs:
           # correctly
           fetch-depth: 0
 
-      # Enable Gateway API in K3s
-      # https://github.com/k3s-io/k3s/issues/12183#issuecomment-2818989109
-      # This will create gateway.networking.k8s.io/v1 kube-system/traefik-gateway
-      - name: pre-configure k3s installation
-        if: matrix.ingress-type == 'gateway'
-        run: |
-          sudo mkdir -p /var/lib/rancher/k3s/server/manifests
-          sudo cp ci/traefik-config.yaml /var/lib/rancher/k3s/server/manifests/
-
       # Starts a k8s cluster with NetworkPolicy enforcement and installs both
       # kubectl and helm
       #
@@ -249,7 +236,7 @@ jobs:
         with:
           k3s-channel: ${{ matrix.k3s-channel }}
           metrics-enabled: false
-          traefik-enabled: ${{ matrix.ingress-type == 'gateway' }}
+          traefik-enabled: false
           docker-enabled: true
 
       - uses: actions/setup-python@v5
@@ -386,21 +373,6 @@ jobs:
           . ./ci/common
           await_autohttps_tls_cert_acquisition
 
-      - name: Test gateway
-        if: matrix.ingress-type == 'gateway'
-        run: |
-          echo "*** kube-system/gateway ***"
-          kubectl -nkube-system get gateway -oyaml
-          echo "*** default/httproute ***"
-          echo "*** curl http://localhost/ ***"
-          curl -vkL http://localhost/
-          curl -vkL http://localhost/ | grep '<title>JupyterHub</title>'
-
-      - name: Get traefik logs
-        if: matrix.ingress-type == 'gateway' && always()
-        run: |
-          kubectl -nkube-system logs deploy/traefik
-
       - name: Run tests
         continue-on-error: ${{ matrix.accept-failure == true }}
         run: |
@@ -418,13 +390,90 @@ jobs:
         with:
           important-workloads: deploy/hub deploy/proxy
 
-      - name: Kubernetes namespace report (kube-system)
-        if: always()
-        uses: jupyterhub/action-k8s-namespace-report@v1
-        with:
-          namespace: kube-system
-
       - name: Debug PostgreSQL logs on failure
         if: failure() && matrix.setup-postgresql-args
         run: |
           kubectl logs statefulset/postgresql
+
+  test-gateway-ingress:
+    # The main test configures autohttps, but this conflicts with testing
+    # ingress/gateway which assume they can directly connect to proxy-public
+    # This is a minimal test that checks connections via a gateway is possible
+    timeout-minutes: 20
+
+    strategy:
+      # Keep running even if one variation of the job fail
+      fail-fast: false
+      matrix:
+        ingress-type:
+          - gateway
+
+    runs-on: ubuntu-24.04
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          # chartpress requires git history to set chart version and image tags
+          # correctly
+          fetch-depth: 0
+
+      # Enable Gateway API in K3s
+      # https://github.com/k3s-io/k3s/issues/12183#issuecomment-2818989109
+      # This will create gateway.networking.k8s.io/v1 kube-system/traefik-gateway
+      - name: pre-configure k3s installation
+        if: matrix.ingress-type == 'gateway'
+        run: |
+          sudo mkdir -p /var/lib/rancher/k3s/server/manifests
+          sudo cp ci/traefik-config.yaml /var/lib/rancher/k3s/server/manifests/
+
+      # Starts a k8s cluster with NetworkPolicy enforcement and installs both
+      # kubectl and helm
+      #
+      # ref: https://github.com/jupyterhub/action-k3s-helm/
+      - uses: jupyterhub/action-k3s-helm@v4
+        with:
+          k3s-channel: stable
+          metrics-enabled: false
+          traefik-enabled: true
+          docker-enabled: true
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      # Build our images if needed and update values.yaml with the tags
+      - name: Install and run chartpress
+        run: |
+          pip3 install -r dev-requirements.txt
+          chartpress
+        env:
+          DOCKER_BUILDKIT: "1"
+
+      - name: "Install local chart"
+        run: >-
+          helm upgrade --install jupyterhub ./jupyterhub
+          --set proxy.service.type=ClusterIP
+          --set httpRoute.enabled=true
+          --set httpRoute.gateway.name=traefik-gateway
+          --set httpRoute.gateway.namespace=kube-system
+
+      - name: "Await local chart"
+        uses: jupyterhub/action-k8s-await-workloads@v3
+        with:
+          timeout: 150
+          max-restarts: 1
+
+      - name: Test gateway
+        if: matrix.ingress-type == 'gateway'
+        run: |
+          echo "*** kube-system/gateway ***"
+          kubectl -nkube-system get gateway -oyaml
+          echo "*** default/httproute ***"
+          echo "*** curl http://localhost/ ***"
+          curl -vkL http://localhost/
+          curl -vL http://localhost/ | grep '<title>JupyterHub</title>'
+
+      - name: Get traefik logs
+        if: always()
+        run: |
+          kubectl -nkube-system logs deploy/traefik
