Fix edge case with numerical namespace strings

--- a/jupyterhub/templates/httproute.yaml
+++ b/jupyterhub/templates/httproute.yaml
@@ -14,7 +14,7 @@ spec:
     - kind: Gateway
       name: {{ .Values.httpRoute.gateway.name }}
       {{- with .Values.httpRoute.gateway.namespace }}
-      namespace: {{ . }}
+      namespace: "{{ . }}"
       {{- end }}
   {{- with .Values.httpRoute.hostnames }}
   hostnames:
