--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -720,7 +720,7 @@ httpRoute:
   hostnames: []
   gateway:
     name: your-gateway
-    # namespace: if different from Z2JH
+    namespace: "" # required for a gateway resource in another namespace
 
 # cull relates to the jupyterhub-idle-culler service, responsible for evicting
 # inactive singleuser pods.
